Set up sass watcher for dev

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch:sass": "sass --watch sass/main.scss css/style.css"
+    "watch:sass": "sass --watch src/sass/main.scss src/App.css"
   },
   "eslintConfig": {
     "extends": [
